$Id: History,v 1.12 2001-05-30 14:33:44 vnivanch Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

29 may 01: V.Ivanchenko 
- clean up againist Linux ANSI strict compilation mode.

23 mar 01 L.Urban (muons-V03-00-05)
- R.Kokoulin's correction to energy loss has been commented out
  in G4MuIonisation.cc
     
05 mar 01 mma (muons-V03-00-04)
- new subdirectory: integral
  migration of all G4I.. processes from muons, standard, utils into integral

05 feb 01: G. Cosmo (muons-V03-00-02)
- STL migration for G4OrderedTable and G4DataVector.
  Modified files: G4IMuBremsstrahlung.cc, G4IMuPairProduction.cc,
                  G4MuBremsstrahlung.cc, G4MuPairProduction.cc

24 jan 01: L. Urban (muons-V03-00-01)
- bug fixed in muon bremstrahlung , in G4MuBremstrahlung.cc 
   in PostStepDoIt.
 
16 jan 01: mma (muons-V03-00-00)
- small corrections in MuEnergyLoss.cc L.Urban 11-01-01
     
08 nov 00: mma (muons-V02-00-03)
- signature in GetLossWithFluct changed L.Urban 30/10/00
     
11 aug 00: mma (muons-V02-00-01)

03 aug 00: gc (muons-V02-00-00r)
- G4VIMuEnergyLoss.cc: changed RandGauss to G4RandGauss to fix problem of
  events' reproducibility.
     
07 jun 00: mma (muons-V01-01-03)
- virtual destructor for G4VEnergyLoss