@@ -1,4 +1,4 @@
-$Id: History,v 1.12 2001-05-30 14:33:44 vnivanch Exp $
+$Id: History,v 1.13 2001-08-10 15:49:01 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,8 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+10 aug 01: mma
+- store/retrieve PhysicsTables implemented in MuIonis, MuBrems, MuPairProd
 
 29 may 01: V.Ivanchenko 
 - clean up againist Linux ANSI strict compilation mode.
